[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gitpython-multiprocessing-refresh"
version = "0.1.0"
description = "Investigate how GitPython refresh() interacts with multiprocessing"
authors = ["Eliah Kagan <degeneracypressure@gmail.com>"]
license = "0BSD"
readme = "README.md"
packages = [
    { include = "gpmpr" },
]

[tool.poetry.dependencies]
python = "^3.7"
GitPython = { git = "https://github.com/gitpython-developers/GitPython.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
isort = [
    { version = "~5.11.5", python = "~3.7" },
    { version = "^5.13.2", python = ">3.8,<4.0" },
]
mypy = [
    { version = "~1.4.1", python = "~3.7" },
    { version = "^1.9.0", python = ">=3.8,<4.0" },
]
pyright = "^1.1.365"
ruff = "^0.4.7"

[tool.poetry.scripts]
git = "gpmpr.fake_broken_git:main"
mplocal = "gpmpr.mplocal:main"
mplocal-monolithic = "gpmpr.mplocal_monolithic:main"
mplocal-separate-payload = "gpmpr.mplocal_separate_payload:main"
mpglobal = "gpmpr.mpglobal:main"
mpglobal-monolithic = "gpmpr.mpglobal_monolithic:main"
mpglobal-separate-payload = "gpmpr.mpglobal_separate_payload:main"

[tool.mypy]
python_version = "3.8"  # Since new versions don't support 3.7.
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.isort]
atomic = true
force_sort_within_sections = true
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
target-version = "py37"
line-length = 88
lint.extend-select = ["E", "W", "F", "S", "B"]
